<resources>
    <string name="app_name">WikiArt</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="added_favorite">Added to favorites</string>
    <string name="removed_favorite">Removed from favorites</string>

    <string name="share">Share</string>
    <string name="buy">Buy</string>
    <string name="year">Year: %1$s</string>
    <string name="dimensions">Dimensions: %1$dx%2$d</string>
    <string name="location_label">Location:</string>
    <string name="period_label">Period:</string>
    <string name="series_label">Series:</string>
    <string name="genres_label">Genres:</string>
    <string name="styles_label">Styles:</string>
    <string name="media_label">Media:</string>
    <string name="galleries_label">Galleries:</string>
    <string name="tags_label">Tags:</string>
    <string name="description_label">Description:</string>
    <string name="related_paintings">Related Paintings</string>

    <string name="famous_works">Famous Works</string>

    <string name="support">Support</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_unavailable">Feedback email unavailable</string>
    <string name="donate">Donate</string>
    <string name="thank_you">Thank you for your support!</string>
    <string name="artists">Artists</string>
    <string name="paintings">Paintings</string>

    <string name="search">Search</string>
    <string name="unable_load_products">Unable to load products</string>
    <string name="load_error">Unable to load content</string>
    <string name="retry">Retry</string>

    <string name="painting_category_media">Media</string>
    <string name="painting_category_style">Style</string>
    <string name="painting_category_genre">Genre</string>
    <string name="painting_category_high_res">High Res</string>
    <string name="painting_category_popular">Popular</string>
    <string name="painting_category_featured">Featured</string>
    <string name="painting_category_favorites">Favorites</string>

    <string name="artist_category_alphabet">Alphabet</string>
    <string name="artist_category_art_movement">Art Movement</string>
    <string name="artist_category_school">Painting School</string>
    <string name="artist_category_genre">Genre</string>
    <string name="artist_category_field">Field</string>
    <string name="artist_category_nation">Nation</string>
    <string name="artist_category_century">Century</string>
    <string name="artist_category_chronology">Chronological</string>
    <string name="artist_category_popular">Popular</string>
    <string name="artist_category_female">Female</string>
    <string name="artist_category_recent">Recent</string>
    <string name="artist_category_institution">Art Institution</string>

    <string name="sort_by_date">By Date</string>
    <string name="sort_by_name">By Name</string>

    <string-array name="artist_painting_sort_names">
        <item>@string/sort_by_date</item>
        <item>@string/sort_by_name</item>
    </string-array>

    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="see_all_paintings">See all paintings</string>
    <string name="born">Born: %1$s</string>
    <string name="died">Died: %1$s</string>
    <string name="biography_label">Biography:</string>
    <string name="gender_label">Gender:</string>
    <string name="themes_label">Themes:</string>
    <string name="periods_label">Periods:</string>
    <string name="birth_label">Born:</string>
    <string name="death_label">Died:</string>
    <string name="change_layout">Change layout</string>
    <string name="layout_list">List layout</string>
    <string name="layout_grid">Grid layout</string>
    <string name="layout_sheet">Sheet layout</string>

    <!-- Transition name used for shared element animations -->
    <string name="transition_detail_image">detailImage</string>

    <string-array name="painting_category_names">
        <item>@string/painting_category_favorites</item>
        <item>@string/painting_category_featured</item>
        <item>@string/painting_category_popular</item>
        <item>@string/painting_category_media</item>
        <item>@string/painting_category_style</item>
        <item>@string/painting_category_genre</item>
        <item>@string/painting_category_high_res</item>
    </string-array>

    <string-array name="artist_category_names">
        <item>@string/artist_category_popular</item>
        <item>@string/artist_category_female</item>
        <item>@string/artist_category_recent</item>
        <item>@string/artist_category_art_movement</item>
        <item>@string/artist_category_school</item>
        <item>@string/artist_category_genre</item>
        <item>@string/artist_category_field</item>
        <item>@string/artist_category_nation</item>
        <item>@string/artist_category_century</item>
        <item>@string/artist_category_chronology</item>
        <item>@string/artist_category_institution</item>
        <item>@string/artist_category_alphabet</item>
    </string-array>

</resources>
